--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@ layout: home
 title : Wios's Web log
 header:
   overlay_image: /img/home-bg-network_2.jpg
-excerpt: It's up to you.
-author_profile: true
+excerpt: 잇스업투유 It's up to you.
+author_profile: true 
 ---
