--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: home
-title : Wios's Web log
+title : CJW homepage : Wios's Web log
 header:
   overlay_image: /img/home-bg-network_2.jpg
 excerpt: 잇스업투유 It's up to you.
