--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 ---
 layout: home
-title : CJW homepage Wios's Web log
+title : CJW HomePage
 header:
   overlay_image: /img/home-bg-network_2.jpg
-excerpt: 잇스업투유 It's up to you.
+excerpt: 재미있게 살고싶은 즐거운 상상.
 author_profile: true 
 ---
