--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: home
-title : CJW Home Page
+title : YeoJoon Home Page
 header:
   overlay_image: /img/home-bg-network_2.jpg
 excerpt: 재미있게 살고싶은 즐거운 상상.
