--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 ---
 layout: home
-title : YeoJoon Home Page
+title : `YeoJoon Home Page`
 header:
   overlay_image: /img/home-bg-network_2.jpg
-excerpt: 재미있게 살고싶은 즐거운 상상.
+excerpt: `재미있게 살고싶은 즐거운 상상.`
 author_profile: true 
 ---
