--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 ---
 layout: home
-title : YeoJoon Home Page
+title : 최징욱 홈페이지
 header:
   overlay_image: /img/home-bg-network_2.jpg
-excerpt: 재미있게 살고싶은 즐거운 상상.
+excerpt: 재미있는.. 행복한.. 즐거운.. 그리고 느긋하게...
 author_profile: true 
 
 ---
