--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: home
-title : 최징욱 홈페이지
+title : 최장욱 홈페이지
 header:
   overlay_image: /img/home-bg-network_2.jpg
 excerpt: 재미있는.. 행복한.. 즐거운.. 그리고 느긋하게...
